fixed bugs with asset page and create new password

--- a/src/website/views/logs.pug
+++ b/src/website/views/logs.pug
@@ -24,7 +24,9 @@ html
             option(value='' selected= name==='')='None' 
             option(value='connection-pool' selected= name==='connection-pool')='connection-pool' 
             option(value='application' selected= name==='application')='application' 
-            option(value='candidate-scanner' selected= name==='candidate-scanner')='candidate-scanner' 
+            option(value='candidate-scanner' selected= name==='candidate-scanner')='candidate-scanner'
+            option(value='screen-state-service' selected= name==='screen-state-service')='screen-state-service'
+            option(value='usage-state-service' selected= name==='usage-state-service')='usage-state-service'
         label Filter by Level:
         div.logs__dropdown-div
           select.atv-input-field(type='text' id='level' name='level')
