--- a/src/website/views/password.pug
+++ b/src/website/views/password.pug
@@ -2,6 +2,8 @@ html
   title Create New Password
   style
     include style.css
+  script 
+    include ../scripts/change-password.js
   body.login
     include components/navbar.pug
     form.password__form(method='POST' action='/password')
@@ -10,14 +12,11 @@ html
         label(for='originalPassword') Current Password 
         input.atv-input-field(type='password' id='originalPassword' placeholder='Current Password' name='originalPassword', required)
       div.atv-div
-        label(for='password') Change Password
-        input.atv-input-field(type='password' id='password' placeholder='New Password' name='password' onchange='validate()', required)
+        label(for='password') New Password
+        input.atv-input-field(type='password' id='password' placeholder='New Password' name='password'  required)
       div.atv-div
-        label(for='confirmPassword') Confirm Password
-        input.atv-input-field(type='password' id='confirmPassword' placeholder='Confirm New Password' name='confirmPassword' onchange='validate()', required)
-      button.atv-button(logintype='submit' id='myButton') Submit
-      p(id='password-match-warning', hidden=true) Current Password and Confirm Password do not match!
-      p(id='password-length-warning', hidden=true) Password has to be more than 8 characters long
-    script 
-      include ../scripts/change-password.js
+        label(for='confirmPassword') Confirm New Password
+        input.atv-input-field(type='password' id='confirmPassword' placeholder='Confirm New Password' name='confirmPassword' required)
+      button.atv-button(type='submit' id='submitButton' name='submitButton' disabled) Submit
+      p(id='password-match-warning', hidden=true) New Password and Confirm New Password do not match or New Password is not atleast 8 characters long
     include components/footer.pug
