--- a/src/website/views/style.scss
+++ b/src/website/views/style.scss
@@ -36,6 +36,17 @@ $standard-font: 'Roboto', sans-serif;
   font-weight: 500;
 }
 
+.atv-button:disabled {
+  background-color: grey;
+}
+
+.atv-button:hover:disabled {
+  background-color: white;
+  border: 2px solid grey;
+  color: grey;
+  font-weight: 500;
+}
+
 .atv-table {
   border-collapse: collapse;
   overflow: hidden;
