--- a/src/website/views/style.scss
+++ b/src/website/views/style.scss
@@ -23,7 +23,7 @@ $standard-font: 'Roboto', sans-serif;
   background-color: $standard-color;
   color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 4px;
   height: 40px;
   margin-top: 20px;
   min-width: 120px;
@@ -43,7 +43,7 @@ $standard-font: 'Roboto', sans-serif;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 .atv-table-container,
@@ -67,6 +67,34 @@ $standard-font: 'Roboto', sans-serif;
 
 .atv-table-item__highlight-red {
   color: red;
+}
+
+.atv-subtable {
+  border-radius: 4px;
+  background-color: darkgray;
+  padding: 8px;
+  font-family: $standard-font;
+  font-size: 12px;
+  text-align: left;
+
+  th {
+    padding: 12px;
+    border: 1px solid;
+  }
+}
+
+.atv-subtable-title {
+  padding: 15px;
+  background-color: #0081ba;
+  color: white;
+}
+
+.atv-subtable-item {
+  padding: 15px;
+  font-family: sans-serif;
+  font-weight: lighter;
+  color: black;
+  background-color: lightgrey;
 }
 
 .atv-title {
@@ -258,7 +286,7 @@ $standard-font: 'Roboto', sans-serif;
     padding-left: 60px;
     padding-right: 60px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 4px;
     background-color: white;
   }
 
@@ -326,7 +354,7 @@ $standard-font: 'Roboto', sans-serif;
   padding-bottom: 20px;
   border: 1px solid #ccc;
   width: 300px;
-  border-radius: 5px;
+  border-radius: 4px;
   background-color: white;
 }
 
