--- a/src/website/views/components/navbar.pug
+++ b/src/website/views/components/navbar.pug
@@ -2,7 +2,7 @@ div.navbar
   div
     a(href='/')
       img.navbar-login__logo(src='/images/corpcloud-logo.png')
-  a.navbar__link(href='/') Home              
+  a.navbar__link(href='/devices') Home              
   a.navbar__link(href='/emergency') Emergency
   a.navbar__link(href='/jobs') Jobs
   a.navbar__link(href='/tasks') Tasks
