updated user guide

--- a/src/website/views/user-guide.pug
+++ b/src/website/views/user-guide.pug
@@ -15,12 +15,18 @@ html
       div
         p.guide__title Jobs:
         p On the jobs page, whenever you perfom a job e.g. Emergency you can see the success output of each device 
-      div 
+      div
+        p.guide__title Applications:
+        p Here you can upload APKS (Android Apps) and install them in the tasks page
+      div
+        p.guide__title Tasks:
+        p On the tasks page here you can create new tasks that the server can do, e.g. installations  
+      div
+        p.guide__title Monitoring:
+        p Hover over Monitoring which brings up the 3 settings
+      div
         p.guide__title Health Check:
         p On the health check page, you can monitor the server that connects to your TV's
-      div
-        p.guide__title Settings:
-      p In settings we currently have two settings, you can add IP addresses, specify your IP Range and Netmask. The other setting is that you can change your password to access the web application
       div
         p.guide__title System Logs: 
         p In the system logs page, you can see all the logs of everything that has happened, you can also filter by what you need to know very useful for debugging
@@ -28,7 +34,14 @@ html
         p.guide__title Candidates:
         p In the candidates page it is a list of discovered TVs in the initial search for TVS
       div
+        p.guide__title Settings:
+      p In settings we currently have two settings, you can add IP addresses, specify your IP Range and Netmask. The other setting is that you can change your password to access the web application
+      div
         p.guide__title Asset Page:
         p On the Assets page, here you can manually add the serial number and names for each TV for tracking purposes
+      div
+        p.guide__title Events:
+        p Hover over Events you have 2 options Screen state and Usage state which shows you all the relative events
+      
       include components/footer.pug
 
