--- a/src/website/views/style.scss
+++ b/src/website/views/style.scss
@@ -410,8 +410,7 @@ $standard-font: 'Roboto', sans-serif;
 
 .screen-state-container-inner {
   overflow-y: auto;
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
 
 /* Usage State */
