--- a/src/website/views/components/navbar.pug
+++ b/src/website/views/components/navbar.pug
@@ -11,13 +11,13 @@ div.navbar
   div.navbar__dropdown
     button.navbar__dropbtn Settings
     div.navbar__dropdown-content
-      a.navbar__dropdown-link(href='/scanner') Scanner Settings
+      a.navbar__dropdown-link(href='/scanner') Discovery Settings
       a.navbar__dropdown-link(href='/password') Change Password
       a.navbar__dropdown-link(href='/assets') Assets
   div.navbar__dropdown
     button.navbar__dropbtn Monitoring
     div.navbar__dropdown-content
-      a.navbar__dropdown-link(href='/candidates') Candidates
+      a.navbar__dropdown-link(href='/candidates') Discovered Devices
       a.navbar__dropdown-link(href='/logs') System Logs
       a.navbar__dropdown-link(href='/healthcheckpage') Health Check
   div.navbar__dropdown
