--- a/src/website/views/devices/details.pug
+++ b/src/website/views/devices/details.pug
@@ -1,11 +1,11 @@
 html
   head
-  title Devices
+  title Device Details
   style 
     include ../style.css
   body.atv-background
     include ../components/navbar.pug
-    p.atv-title Devices
+    p.atv-title Device Details
     table.atv-table
       tr.atv-table-title
         th.atv-table-title Mac Address
