--- a/src/website/views/scanner.pug
+++ b/src/website/views/scanner.pug
@@ -1,12 +1,12 @@
 html
-    title Scanner
+    title Discovery Settings
     style 
         include style.css
     script 
         include ../scripts/scanner.js
     body.atv-background
         include components/navbar.pug
-        p.atv-title Scanner Settings
+        p.atv-title Discovery Settings
         div.atv-setting-container
             form.atv-form(action="/scanner" method="POST")
                 div.scanner__div
