--- a/src/website/views/components/footer.pug
+++ b/src/website/views/components/footer.pug
@@ -5,7 +5,7 @@ div.footer
       p.footer__paragraph 1300 409 552 <br> support@corpcloud.com.au
     div.footer__div
       p.footer__paragraph-title Build Number
-      p.footer__paragraph Needs to be implemented
+      p.footer__paragraph 712e9081
     div.footer__div
       p.footer__paragraph-title Install ID
-      p.footer__paragraph Needs to be implemented
+      p.footer__paragraph demo-install-001
