--- a/src/website/views/components/footer.pug
+++ b/src/website/views/components/footer.pug
@@ -4,8 +4,8 @@ div.footer
       p.footer__paragraph-title Support details
       p.footer__paragraph 1300 409 552 <br> support@corpcloud.com.au
     div.footer__div
-      p.footer__paragraph-title Build Number
-      p.footer__paragraph 712e9081
+      p.footer__paragraph-title Build ID
+      p.footer__paragraph {{buildId}}
     div.footer__div
       p.footer__paragraph-title Install ID
-      p.footer__paragraph demo-install-001
+      p.footer__paragraph {{installId}}
