--- a/src/website/views/components/navbar.pug
+++ b/src/website/views/components/navbar.pug
@@ -7,6 +7,7 @@ div.navbar
   a.navbar__link(href='/jobs') Jobs
   a.navbar__link(href='/tasks') Tasks
   a.navbar__link(href='/applications') Applications
+  a.navbar__link(href='/dynamic-content') Dynamic Content
   a.navbar__link(href='/user-guide') User Guide           
   div.navbar__dropdown
     button.navbar__dropbtn Settings
