--- a/src/website/views/emergency.pug
+++ b/src/website/views/emergency.pug
@@ -11,6 +11,8 @@ html
         input(type='radio' id='stop' name='set' value='stop')
         label(for='start') Start
         input(type='radio' id='start' name='set' value='start')
+        input.atv-input-field(type='' id='message' placeholder='Put Emergency Reason Here' name='message' value='')
       button.atv-button(type='submit') Submit
+        
     include components/footer.pug
 
