Added setup wizard

--- a/src/website/views/components/navbar.pug
+++ b/src/website/views/components/navbar.pug
@@ -15,6 +15,7 @@ div.navbar
       a.navbar__dropdown-link(href='/scanner') Discovery Settings
       a.navbar__dropdown-link(href='/password') Change Password
       a.navbar__dropdown-link(href='/assets') Assets
+      a.navbar__dropdown-link(href='/setup-wizard') Setup Wizard
   div.navbar__dropdown
     button.navbar__dropbtn Monitoring
     div.navbar__dropdown-content
