--- a/src/website/views/scanner.pug
+++ b/src/website/views/scanner.pug
@@ -8,6 +8,7 @@ html
 		include components/navbar.pug
 		p.atv-title Discovery Settings
 		div.atv-setting-container
+		include components/error.pug 
 			form.atv-form(action="/scanner" method="POST")
 				input.atv-input-field(value=originalUrl type='text' name='originalUrl' hidden)
 				div.scanner__div
@@ -19,8 +20,6 @@ html
 							div(id='ips-div')
 								input.atv-input-field(value= ip placeholder='x.x.x.x' type='text' name='ipAddresses[]')
 								button.atv-button(onclick="deleteTextbox('ips-div')") Delete
-						each invalidIp in invalidData && invalidData.invalidIps ? invalidData.invalidIps : []
-							p()= invalidIp
 					div.scanner__columns(id='Ranges')
 						p() IP Ranges
 						div
@@ -29,8 +28,6 @@ html
 							div(id='ranges-div')
 								input.atv-input-field(value= range placeholder='x.x.x.x-x.x.x.x' type='text' name='ipRanges[]')
 								button.atv-button(onclick="deleteTextbox('ranges-div')") Delete
-						each invalidRange in invalidData && invalidData.invalidRanges ? invalidData.invalidRanges : []
-							p()= invalidRange
 					div.scanner__columns(id='Netmask')
 						p() IP Netmask
 						div
@@ -39,8 +36,6 @@ html
 							div(id='netmask-div')
 								input.atv-input-field(value= network placeholder='x.x.x.x/x' type='text' name='ipNetmasks[]')
 								button.atv-button(onclick="deleteTextbox('netmask-div')") Delete
-						each invalidMask in invalidData && invalidData.invalidNetmasks ? invalidData.invalidNetmasks : []
-							p()= invalidMask
 					div.scanner_columns(id='Netmask')
 
 				div.scanner__save
