--- a/src/website/views/components/navbar.pug
+++ b/src/website/views/components/navbar.pug
@@ -1,7 +1,7 @@
 div.navbar
   div
     a(href='/')
-      img.navbar-login__logo(src='/images/corpcloud-logo.png')
+      img.navbar-login__logo(src='/images/EW.png')
   a.navbar__link(href='/devices') Home              
   a.navbar__link(href='/emergency') Emergency
   a.navbar__link(href='/jobs') Jobs
