--- a/src/website/views/components/navbarlogin.pug
+++ b/src/website/views/components/navbarlogin.pug
@@ -1,6 +1,6 @@
 div.navbar-login
         div
             a(href='/')
-                img.navbar-login__logo(src='/images/corpcloud-logo.png')
+                img.navbar-login__logo(src='/images/EW.png')
         div.navbar-login__title
-            h1 Cloud Hotel Management System
+            h1 Wireless Hotel Management System
